8147427: refactor test launchers to support jake
Reviewed-by: kcr